add docs of the resufull api usiing swagger
